@@ -22,6 +22,7 @@ Now
  * Use stack instead recursive check for equality.
  * More strong mutation.
  * Show more information about evolution.
+ * Avoiding double individual.
 
 Version 0.0.0.7 2010-12-01
  * Make GP::CheckForParam more strict.
